[package]
name = "steam-api"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.7", features = ["json", "cookies"] }
reqwest-retry = "0.1.3"
reqwest-middleware = "0.1.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_with = "1.11.0"
serde_repr = "0.1"
serde_qs = "0.8.5"
serde_bytes = "0.11.5"
serde_urlencoded = "0.7"
lazy-regex = "2.2.2"
bytes = "1.1.0"
anyhow = "1.0.44"
tokio = { version = "1", features = ["sync", "macros", "net", "io-util", "rt", "full"] }
steamid-ng = "1.0.0"
to-binary = "0.4.0"
rand = "0.8.4"
thiserror = "1.0.38"